samples/_failures_safe/1761093288_b4bcf3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f49522b.c: In function ‘main’:
./samples/SAFE/__tmp_5f49522b.c:153:9: error: expected expression at end of input
  153 |         {EVENT_RESET,
      |         ^
./samples/SAFE/__tmp_5f49522b.c:153:9: error: expected declaration or statement at end of input
